--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "clipboard": "^2.0.8",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "lodash": "^4.17.21",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "screenfull": "^4.2.1",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
+    "vuedraggable": "^2.24.3",
     "vuex": "3.1.0"
   },
   "devDependencies": {
