录音功能实现

--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,8 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/dev-api'
 
+# 接口地址
+VUE_APP_BASE_APIURL = 'http://account.web-jshtml.cn/api/v1'
+
 # 系统名称
 VUE_APP_TITLE = 'webdyc'
