--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clipboard": "^2.0.8",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
+    "js-audio-recorder": "^1.0.7",
     "js-cookie": "2.2.0",
     "lodash": "^4.17.21",
     "normalize.css": "7.0.0",
@@ -27,7 +28,8 @@
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuedraggable": "^2.24.3",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "wavesurfer.js": "^5.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
