--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,13 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_API = '/proApi'
 
-# 系统名称
-VUE_APP_TITLE = 'webdyc'
+# 接口地址
+VUE_APP_BASE_APIURL = 'http://account.pro-jshtml.cn/api/v1'
 
+# user api
+VUE_APP_USER_API = '/userApi'
+
+# 接口地址
+VUE_APP_USER_APIURL = 'http://account.user-jshtml.cn/api/v1'
