--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.18.1",
     "clipboard": "^2.0.8",
     "core-js": "3.6.5",
+    "echarts": "^5.2.2",
     "element-ui": "2.13.2",
     "js-audio-recorder": "^1.0.7",
     "js-cookie": "2.2.0",
